# higgsfield-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/higgsfield-cli/: SKILL.md
higgsfield_cli/: auth.py  browser_bridge.py  chrome_bridge.py  cli.py  client.py  config.py  constants.py  exceptions.py  formatter.py  models.py  serialization.py
higgsfield_cli/commands/: _common.py  account.py  auth.py  enhance.py  extras.py  generate.py  history.py
